--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   "license": "ISC",
   "dependencies": {
     "@babel/cli": "^7.6.2",
+    "@babel/polyfill": "^7.6.0",
     "@babel/preset-env": "^7.6.2",
     "loader-utils": "^1.2.3",
+    "request": "^2.88.0",
     "sass-resources-loader": "^2.0.1"
   },
   "devDependencies": {
